--- a/Home Price Prediction.ipynb
+++ b/Home Price Prediction.ipynb
@@ -240,7 +240,7 @@
     "\n",
     "Home prices can be presented as following equation,\n",
     "<br>\n",
-    "**home price = m * (area) + b**"
+    "#### home price = m * (area) + b"
    ]
   },
   {
